--- a/CourseProject.html
+++ b/CourseProject.html
@@ -40,6 +40,16 @@
     <div>
         <ul class="timeLine">
             <li>
+                <div class="date">16/7/8</div>
+                <div class="time">23:38</div>
+                <div class="number">2</div>
+                <div class="content">
+                    <p><span class="title">基础实验 4：聊天墙</span>
+                        <br /> <a href="https://yangsz14.github.io/project4/WechatWall.html">yangsz14.github.io/project4/WechatWall.html</a>
+                    </p>
+                </div>
+            </li>
+            <li>
                 <div class="date">16/7/1</div>
                 <div class="time">16:54</div>
                 <div class="number">1</div>
